---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@builder.io/qwik';
export const Header = component$(() => {
    return $(() => console.log("hello sym2"), "sym2")
});

============================= project/test.tsx ==

import * as qwik from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
export const Header = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("../entry_hooks")
, "Header_component"));

============================= h_test_header_component1.tsx ==

import * as qwik from "@builder.io/qwik";
export const Header_component1 = ()=>console.log("hello sym2")
;

/*
{
  "origin": "project/test.tsx",
  "name": "Header_component1",
  "entry": "entry_hooks",
  "canonicalFilename": "h_test_header_component1",
  "extension": "tsx"
}
*/
============================= h_test_header_component.tsx ==

import * as qwik from "@builder.io/qwik";
export const Header_component = ()=>{
    return qwik.qrl(()=>import("./entry_hooks")
    , "Header_component1");
};

/*
{
  "origin": "project/test.tsx",
  "name": "Header_component",
  "entry": "entry_hooks",
  "canonicalFilename": "h_test_header_component",
  "extension": "tsx"
}
*/
============================= entry_hooks.js (ENTRY POINT)==

export { Header_component1 } from "./h_test_header_component1";
export { Header_component } from "./h_test_header_component";

== DIAGNOSTICS ==

[]
